# src/main/kotlin/com/iobuilders/bank/account/adapter/in/rest/AccountResponseConverter.kt
@@ -1,7 +1,6 @@
 package com.iobuilders.bank.account.adapter.`in`.rest
 
 import com.iobuilders.bank.account.domain.model.Account
-import com.iobuilders.bank.model.AccountBalanceResponse
 import com.iobuilders.bank.model.AccountResponse
 import org.springframework.core.convert.converter.Converter
 import org.springframework.stereotype.Component
@@ -17,15 +16,3 @@ class AccountResponseConverter : Converter<Account, AccountResponse> {
         )
     }
 }
-
-@Component
-class AccountBalanceResponseConverter : Converter<Account, AccountBalanceResponse> {
-    override fun convert(source: Account): AccountBalanceResponse {
-        return AccountBalanceResponse(
-            accountId = source.id,
-            iban = source.iban,
-            balance = source.amount,
-        )
-    }
-}
-
